After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750019 - Possible crash after printers panel is closed
Possible crash after printers panel is closed
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-28 10:05 UTC by mhatina
Modified: 2015-06-09 12:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
signals disconnect (3.20 KB, patch)
2015-05-28 10:05 UTC, mhatina
none Details | Review
signals disconnect (2.10 KB, patch)
2015-05-28 12:05 UTC, mhatina
none Details | Review
signals disconnect (2.11 KB, patch)
2015-06-04 07:09 UTC, mhatina
committed Details | Review

Description mhatina 2015-05-28 10:05:11 UTC
Created attachment 304140 [details] [review]
signals disconnect

In downstream bugzilla was reported crash, which was probably caused by calling one of signals after panel was closed. This led to calling functions on non-existing object.

This problem should be fixed in attached patch.

https://bugzilla.redhat.com/show_bug.cgi?id=1218003
Comment 1 Bastien Nocera 2015-05-28 10:11:18 UTC
Review of attachment 304140 [details] [review]:

You should use g_signal_connect_object() instead.
Comment 2 Marek Kašík 2015-05-28 10:11:51 UTC
Review of attachment 304140 [details] [review]:

Looks good to me. Thank you for the patch.
Comment 3 Bastien Nocera 2015-05-28 10:16:10 UTC
Comment on attachment 304140 [details] [review]
signals disconnect

Nope.
Comment 4 mhatina 2015-05-28 12:05:42 UTC
Created attachment 304148 [details] [review]
signals disconnect

Fixed.
Comment 5 Bastien Nocera 2015-05-29 15:25:32 UTC
Review of attachment 304148 [details] [review]:

In the subject, please explain what it fixes, for example:
printers: Fix possible crash after closing the panel

Rest looks fine.
Comment 6 mhatina 2015-06-04 07:09:32 UTC
Created attachment 304567 [details] [review]
signals disconnect

Fixed.
Comment 7 Bastien Nocera 2015-06-04 09:13:33 UTC
Review of attachment 304567 [details] [review]:

Looks good.
Comment 8 Marek Kašík 2015-06-09 12:35:49 UTC
Comment on attachment 304567 [details] [review]
signals disconnect

I've pushed the patch to master.