printers: Fix possible crash after closing the panel

Disconnect on_lockdown_settings_changed and on_permission_changed signals
when printers panels is being disposed, so they won't get called after panel
no longer exists.

https://bugzilla.redhat.com/show_bug.cgi?id=1218003
https://bugzilla.gnome.org/show_bug.cgi?id=750019